--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Store</title>
+  <title>Cifrão $$ Gerencie suas finanças $$</title>
   <!--[if lt IE 9]>
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
   <![endif]-->
@@ -24,9 +24,9 @@
       <a class="brand" href="#">Cifrão</a>
       <div class="nav-collapse">
         <ul class="nav">
-          <li><%= link_to "Movimentações", products_path %></li>
+          <li><%= link_to "Movimentações" %></li>
           <li><%= link_to "Contas" %></li>
-          <li><%= link_to "Ajuda" %></li>
+          <li><%= link_to "Preferências" %></li>
           <li><%= link_to "Sair" %></li>
         </ul>
       </div>
