--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,8 +2,7 @@
 
 <%= form_for @user do |f| %>
     <% if @user.errors.any? %>
-        <div class="error_messages">
-          <h2>Form is invalid</h2>
+        <div class="alert alert-error">
           <ul>
             <% for message in @user.errors.full_messages %>
                 <li><%= message %></li>
