Scaffold de contas e entidades

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,8 @@
       <div class="nav-collapse">
         <ul class="nav">
           <li><%= link_to "Movimentações" %></li>
-          <li><%= link_to "Contas" %></li>
+          <li><%= link_to "Contas", conta_path %></li>
+          <li><%= link_to "Entidades", entidades_path %></li>
           <li><%= link_to "Preferências" %></li>
           <li><%= link_to "Sair" %></li>
         </ul>
