--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="#">Cifrão</a>
+      <%= link_to "Cifrão", root_url, :class => 'brand'  %>
       <div class="nav-collapse collapse">
         <ul class="nav pull-right">
           <li class="dropdown open">	  
@@ -39,7 +39,11 @@
 			</ul>
 		  </li> 
           <li><%= link_to "Preferências" %></li>
-          <li><%= link_to "Sair" %></li>
+          <li><%= if current_user.nil?
+                    link_to "Entrar", new_session_path
+                  else
+                    link_to "Sair", destroy_session_path
+                  end %></li>
         </ul>
       </div>
     </div>
