Atualização menu para receitas e total de despesas na listagem

--- a/app/views/despesas/index.html.erb
+++ b/app/views/despesas/index.html.erb
@@ -22,6 +22,10 @@
     <td><%= link_to 'Destroy', despesa, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
+  <tr>
+    <td>Total:</td>
+    <td><%= @despesas.sum(&:valor) %></td>		
+  </tr>
 </table>
 
 <br />
