--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
           <li class="dropdown open">	  
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Movimentações <b class="caret"></b></a>			
 			<ul class="dropdown-menu">
-				<li><%= link_to "Receitas" %></li>
+				<li><%= link_to "Receitas", receita_path %></li>
 	            <li><%= link_to "Despesas", despesas_path %></li>
 			</ul>
 		  </li> 
