--- a/app/views/conta/_form.html.erb
+++ b/app/views/conta/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.text_field :nro_conta %>
   </div>
   <div class="field">
+    <%= f.label :alias %><br />
+    <%= f.text_field :alias %>
+  </div>
+  <div class="field">
     <%= f.label :saldo %><br />
     <%= f.text_field :saldo %>
   </div>
