--- a/app/views/conta/show.html.erb
+++ b/app/views/conta/show.html.erb
@@ -11,13 +11,18 @@
 </p>
 
 <p>
+  <b>Alias:</b>
+  <%= @contum.alias %>
+</p>
+
+<p>
   <b>Saldo:</b>
   <%= @contum.saldo %>
 </p>
 
 <p>
   <b>Entidades:</b>
-  <%= @contum.entidades_id %>
+  <%= Entidade.find(@contum.entidades_id).nome %>
 </p>
 
 
