--- a/app/views/despesas/_form.html.erb
+++ b/app/views/despesas/_form.html.erb
@@ -21,11 +21,11 @@
   </div>
   <div class="field">
     <%= f.label :conta_origem %><br />
-    <%= f.select :conta_origem_id, Contum.all.collect{|c| [c.nro_conta, c.id]} %>
+    <%= f.select :conta_origem_id, Contum.all.collect{|c| [c.nro_conta.to_s + " - " + c.alias.to_s, c.id]} %>
   </div>
   <div class="field">
     <%= f.label :conta_destino %><br />
-    <%= f.select :conta_destino_id, Contum.all.collect{|c| [c.nro_conta, c.id]} %>
+    <%= f.select :conta_destino_id, Contum.all.collect{|c| [c.nro_conta.to_s + " - " + c.alias.to_s, c.id]} %>
   </div>
   <div class="actions">
     <%= f.submit %>
