--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,6 +22,6 @@
       <%= f.label :password_confirmation %>
       <%= f.password_field :password_confirmation %>
     </div>
-    <div class="actions"><%= f.submit %></div>
+    <div class="actions"><%= f.submit 'Cadastrar!', :class => 'btn btn-primary btn-large' %></div>
 <% end %>
 
