--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,8 +1,31 @@
+@import url(http://fonts.googleapis.com/css?family=Armata);
+
+
+.brand {
+  padding: 5px 20px !important;
+}
+
+.navbar-fixed-top {
+  background-color: #333 !important;
+}
+
+.armata, h1, h2, h3, .btn, .nav {
+  font-family: Armata, sans-serif !important;
+}
+
 @import "twitter/bootstrap/bootstrap";
 
-body { padding-top: 60px; }
+body { padding-top: 60px;}
 
 @import "twitter/bootstrap/responsive";
+@navbarBackground: @grayDarker;
+@navbarBackgroundHighlight: @grayDark;
+@navbarText: @grayLight;
+@navbarLinkColor: @grayLight;
+@navbarLinkColorHover: white;
+@navbarLinkColorActive: white;
+@navbarBrandColor: white;
+@sansFontFamily: Armata, Verdana, Arial, sans-serif;
 
 // Set the correct sprite paths
 @iconSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings.png");
@@ -18,6 +41,8 @@ body { padding-top: 60px; }
 
 // Font Awesome
 @import "fontawesome";
+
+@sansFontFamily: Armata, Verdana, Arial, sans-serif;
 
 // Your custom LESS stylesheets goes here
 //
