--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,26 @@
-<h1>Bem vindo ao Cifrão</h1>
-<h3>Seu sistema de controle financeiro</h3>
-
-<p>Esta é a tela de boas vindas para usuários não autenticados.
-
-<%= link_to "Autentique", new_session_path %> para acessar sua conta!</p>
+<div class="row-fluid">
+  <div class="span12" style="text-align: center;">
+    <p><img src="<%=root_url%>icons/Icone-Cifrao-b144.png" /></p>
+    <h1>Bem vindo ao Cifrão</h1>
+    <h3>Seu sistema de controle financeiro</h3>
+    <br />
+    <div class="span4 offset4">
+      <%= link_to "Entrar no Sistema", new_session_path, :class => 'btn btn-primary btn-block btn-large', :style => 'color: white;' %>
+      <br />
+      <%= link_to "Quero me cadastrar!", new_user_path, :class => 'btn btn-warning btn-block btn-large hidden-phone', :style => 'color:white' %>
+      <%= link_to "O que é isso?", "#about", :class => 'btn btn-warning btn-block btn-large hidden-desktop hidden-tablet', :style => 'color:white' %>
+    </div>
+  </div>
+</div>
 <br />
-<%= link_to "Entrar no Sistema", new_session_path, :class => 'btn btn-primary btn-large', :style => 'color: white;' %>
-
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="row-fluid">
+  <div class="span4 mini-layout">
+    Benefícios 1
+  </div>
+  <div class="span4 mini-layout">
+    Beneficios 2
+  </div>
+  <div class="span4 mini-layout">
+    Beneficios 3
+  </div>
+</div>
