--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,14 +31,18 @@
       <a href="<%=root_url%>" class="brand armata"><img src="<%=root_url%>icons/Icone-Cifrao-b32.png" /> Cifrão</a>
       <div class="nav-collapse collapse">
         <ul class="nav pull-right">
-          <li class="dropdown open">	  
+          <% if current_user.nil? %>
+          <li><%= link_to "Cadastre-se", new_user_path %></li>
+          <li><%= link_to "Entrar", new_session_path %></li>
+          <% else %>
+          <li class="dropdown closed">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Movimentações <b class="caret"></b></a>			
 			<ul class="dropdown-menu">
 				<li><%= link_to "Receitas", receita_path %></li>
 	            <li><%= link_to "Despesas", despesas_path %></li>
 			</ul>
 		  </li> 
-		  <li class="dropdown open">	  
+		  <li class="dropdown closed">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown">Cadastro <b class="caret"></b></a>			
 			<ul class="dropdown-menu">
 				<li><%= link_to "Contas", conta_path %></li>
@@ -46,11 +50,8 @@
 			</ul>
 		  </li> 
           <li><%= link_to "Preferências" %></li>
-          <li><%= if current_user.nil?
-                    link_to "Entrar", new_session_path
-                  else
-                    link_to "Sair", destroy_session_path
-                  end %></li>
+          <li><%=link_to "Sair", destroy_session_path %></li>
+          <% end %>
         </ul>
       </div>
     </div>
@@ -59,7 +60,12 @@
 
 
 <div class="container">
-  <%= yield %>
+  <div class="row-fluid">
+    <div class="span12">
+      <%= yield %>
+    </div>
+  </div>
+
 </div>
 </body>
 </html>
