--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
 <div class="row-fluid" style="text-align: center;">
-  <h1>Cadastre-se</h1>
-  <h3>Não há dúvida: você vai curtir!</h3>
-</div>
-<div class="row-fluid">
+  <div class="span12">
+    <h1>Cadastre-se</h1>
+    <h3>Não há dúvida: você vai curtir!</h3>
+  </div>
   <div class="span4 offset4">
     <%= form_for @user do |f| %>
         <% if @user.errors.any? %>
@@ -22,10 +22,13 @@
         </div>
         <div class="field">
           <%= f.password_field :password_confirmation, :placeholder => "Repita a mesma senha", :class => 'input-block-level' %>
-        </div>
+          </div>
         <div class="actions"><%= f.submit 'Cadastrar!', :class => 'btn btn-primary btn-large btn-block' %></div>
     <% end %>
   </div>
 </div>
-
-
+<script type="text/javascript">
+    $("#user_password").passStrength({
+        userid:	"#user_email"
+    });
+</script>
